2004-12-12  Martin Baulig  <martin@ximian.com>

	* expression.cs (Unary.TryReduceNegative): Added support for
	SByteConstant and ByteConstant.
	(Unary.Reduce): Check error values from TryReduceNegative().

2004-12-10  Marek Safar  <marek.safar@seznam.cz>

	* attributes.cs (Attribute.Resolve): Avoid multiple error report
	and report exception as error 182.

2004-12-10  Raja R Harinath  <rharinath@novell.com>

	* driver.cs (Main): Fix message when there are warnings.

2004-12-09  Miguel de Icaza  <miguel@ximian.com>

	* delegate.cs: Fixed my fix from yesterday, sorry about that.

2004-12-09  Marek Safar  <marek.safar@seznam.cz>

	* anonymous.cs, class.cs, convert.cs, doc.cs, support.cs: 
	Reduced number of warnings.
	
	* class.cs (TypeContainer.VerifyClsCompliance): One if is enough.

2004-12-08  Miguel de Icaza  <miguel@ximian.com>

	* driver.cs: Removed message.

	* delegate.cs: Fix bug introduced in 1.1.x: 70219.

2004-12-08    <vargaz@freemail.hu>

	* cs-tokenizer.cs: Add workaround for NET 2.0 beta 1 csc bug.

2004-12-08  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.VerifyClsCompliance): Report a CS3003
	instead of a CS3002 for properties and indexer.

2004-12-08  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberName.ToString): Make this work again.

2004-12-08  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (Resolve): Add error 591 detection.

	* class.cs (FieldMember.Define): Add error 1547 detection.
	(Indexer.Define): Add error 620 detection.
	(Operator.Define): Add error 590 detection.

	* ecore.cs: Missing argument for error 79.

	* expression.cs (ComposedCast.DoResolveAsTypeStep): Add error 611
	detection.

2004-12-07  Marek Safar  <marek.safar@seznam.cz>

	Fix #70106
	* assign.cs.cs (Assign.DoResolve): Reports error 1648 for value types
	only.

2004-12-07  Atsushi Enomoto  <atsushi@ximian.com>

	* cs-parser.jay : handle doc comments on implicit/explicit operators.
	  Some operator comments were suppressed.